# astro-rotator

./: .gitignore  CONTRIBUTING.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: checks.yml
docs/: ANGLE_EVIDENCE_REPORT_SCHEMA.md  ARCHITECTURE.md  GOAL.md  IMAGE_FORMATS_AND_METADATA.md  IMPLEMENTATION_STACK.md  INCLINOMETER_CALIBRATION_CONFIDENCE.md  OPEN_SOURCE_TOOLS_AND_WORKFLOWS.md  PRODUCT_BRIEF.md  REQUIREMENTS.md  SAMPLE_DATA_CANDIDATES.md  SYNTHETIC_STAR_FIELD_GENERATOR.md
scripts/: check.sh  security_check.sh
src/astro_rotator/: __init__.py  cli.py
src/astro_rotator/angle_model/: __init__.py  parallactic.py
src/astro_rotator/evidence/: __init__.py  image_registration.py  inclinometer.py
src/astro_rotator/frame_catalog/: __init__.py  metadata.py  readers.py
src/astro_rotator/reporting/: __init__.py  schema.py
src/astro_rotator/rotator/: __init__.py  pgm.py
src/astro_rotator/testdata/: __init__.py  synthetic.py
tests/: test_cli.py  test_frame_metadata.py  test_frame_readers.py  test_image_registration.py  test_inclinometer.py  test_package.py  test_parallactic.py  test_report_schema.py  test_rotator_pgm.py  test_synthetic.py
